ui-ux: Fix the intro 'letters' overflow on sections

--- a/css/app.sass
+++ b/css/app.sass
@@ -224,6 +224,7 @@ header
 		background-attachment: fixed
 		background-position: center
 		background-size: cover
+		z-index: -1
 		.overlay
 			position: absolute
 			width: 100%
@@ -237,7 +238,7 @@ header
 			top: 12%
 			color: $color-white
 			text-align: center
-			z-index: 99
+			z-index: 0
 			.hello
 				img
 					border: 1px solid $color-white
@@ -250,6 +251,8 @@ header
 
 	// About
 	.about
+		position: relative
+		background: $color-white
 		padding: 2rem 0
 
 		.section-title
